t+zu:[[za]] t+zu:[[fika]] t-balance t+zu:[[ba]] ([[WT:EDIT|Assisted]]) <come#18055275>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -114,8 +114,8 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Japanese: {{t+|ja|来る|tr=[[くる]], kúru}}, {{t+|ja|いらっしゃる|tr=irassharu}} {{qualifier|honorific}},  {{t-|ja|おいでになる|tr=o-ide-ni naru}} {{qualifier|honorific}}, {{t-|ja|参る|tr=まいる, mairu}} {{qualifier|humble}}
 * Khmer: {{t+|km|មក|tr=mɔɔk|sc=Khmr}}
 * Korean: {{t+|ko|오다|tr=oda|sc=Hang}}
-{{trans-mid}}
 * Kurdish: [[hatin]], {{ku-Arab|[[هاتن]]}}
+{{trans-mid}}
 * Lao: {{t-|lo|ມາ|tr=maa|sc=Laoo}}
 * Latin: {{t+|la|venio}}
 * Lojban: {{t+|jbo|klama|xs=Lojban}}
@@ -155,6 +155,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * West Frisian: {{t-|fy|komme|xs=West Frisian}}
 * Yiddish: {{t-|yi|קומען|tr=komen|sc=Hebr}}
 * Zazaki: {{tø|zza|amaene}}
+* Zulu: {{t|zu|za|alt=-za}}
 {{trans-bottom}}
 
 {{trans-top|to arrive, to appear}}
@@ -163,12 +164,13 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Czech: {{t+|cs|přijít}}
 * French: {{t+|fr|arriver}}
 * Galician: {{t+|gl|vir|xs=Galician}}
-{{trans-mid}}
 * German: {{t+|de|kommen}}, {{t+|de|ankommen}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|megjön}}, {{t+|hu|jön}}
 * Norwegian: {{t-|no|ankomme}}, {{t+|no|komme}}
 * Scottish Gaelic: {{t-|gd|thig|xs=Scottish Gaelic}}
 * Tunisian Arabic: {{tø|aeb|وصل|tr=wuṣil|sc=Arab}}
+* Zulu: {{t|zu|fika|alt=-fika}}
 {{trans-bottom}}
 
 {{trans-top|to have a relative position in a sequence}}
@@ -208,6 +210,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Hungarian: {{t+|hu|válik}}
 {{trans-mid}}
 * Vietnamese: {{t+|vi|thành|xs=Vietnamese}}, {{t+|vi|trở nên|xs=Vietnamese}}, {{t+|vi|trở thành|xs=Vietnamese}}
+* Zulu: {{t|zu|ba|alt=-ba}}
 {{trans-bottom}}
 
 {{trans-top|to turn out to be}}
