--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -91,7 +91,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Breton: [[komz]]
 * Bulgarian: {{t+|bg|говоря|tr=govorja}} (1, 6)
 * Burmese: {{t|my|ပြော|tr=pyaw:|sc=Mymr}}, {{qualifier|formal}} {{t|my|မြွက်|tr=mywet|sc=Mymr}}
-* Catalan: [[parlar]]
+* Catalan: {{t|ca|parlar}}
 * Chinese:
 *: Mandarin: {{t-|cmn|說|sc=Hani}},  {{t-|cmn|说|tr=shuō|sc=Hani}},  {{t|cmn|說話|sc=Hani}},  {{t-|cmn|说话|tr=shuōhuà|sc=Hani}},  {{t-|cmn|講|sc=Hani}},  {{t-|cmn|讲|tr=jiǎng|sc=Hani}}
 * Czech: {{t+|cs|mluvit}},  {{t-|cs|hovořit}}
@@ -134,7 +134,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Navajo: {{tø|nv|yáłtiʼ}}
 * Ngarrindjeri: {{tø|nay|kungun}}
 * Norwegian: {{t+|no|snakke}}
-* Occitan: [[parlar]]
+* Occitan: {{t|oc|parlar}}
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan|xs=Persian}}
 * Pipil: {{tø|ppl|taketza}}, {{tø|ppl|taquetza}}
 * Polish: {{t+|pl|mówić}}
@@ -205,6 +205,11 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 
 {{trans-top|to communicate a fact or feeling}}
 * Finnish: {{t|fi|viestiä}}, {{t|fi|ilmaista}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{ttbc-top}}
+* Ido: {{t|io|parolar}}
 {{trans-mid}}
 {{trans-bottom}}
 
