t+et:[[kaunis]] t+et:[[ilus]] t-balance t+lv:[[skaists]] t+lt:[[gražus]] ([[WT:EDIT|Assisted]]) <beautiful#18085411>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -78,7 +78,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Egyptian: {{tø|egy|nfr|sc=Egyp}}
 *: <hiero>nfr-f:r-A40</hiero>
 * Esperanto: {{t+|eo|bela|xs=Esperanto}}
-* Estonian: [[kaunis]] [[ilus]]
+* Estonian: [[kaunis]] [[ilus]], {{t|et|kaunis}}, {{t|et|ilus}}
 * Faroese: {{t+|fo|vakur|m}}, {{t-|fo|vøkur|f}} {{t-|fo|vakurt|n}}
 * Fijian: [[totoka]]
 * Filipino: [[maganda]]
@@ -105,7 +105,9 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 *: Sorani: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
 * Lao: {{t-|lo|ງາມ|tr=ngaam|sc=Laoo}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
+* Latvian: {{t|lv|skaists}}
 * Limburgish: {{t-|li|sjoen|xs=Limburgish}}
+* Lithuanian: {{t|lt|gražus}}
 * Lojban: {{t-|jbo|melbi|xs=Lojban}}
 * Low German: {{t-|nds|schöön}}, {{t-|nds|scheun}}
 * Macedonian: {{t-|mk|убав|tr=úbav}}, {{t-|mk|прекрасен|tr=prékrasen}}
