t+ga:[[spéiriúil]] ([[WT:EDIT|Assisted]]) <beautiful#18086724>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -92,7 +92,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Ido: {{t+|io|bela|xs=Ido}}
 * Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 * Interlingua: {{t-|ia|belle}}
-* Irish: {{t-|ga|álainn|xs=Irish}}
+* Irish: {{t-|ga|álainn|xs=Irish}}, {{t|ga|spéiriúil}}
 * Italian: {{t+|it|bello}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t-|ja|綺麗}}, {{t-|ja|きれい|tr=kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
 * Jèrriais: {{tø|roa-jer|bieau|m}}, {{tø|roa-jer|belle|f}}
