/* German */ {{de-adj}}? <blond#18090870>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -150,7 +150,7 @@ Alternate etymology connects {{etyl|frk|-}} *''blund'' to {{proto|Germanic|blund
 ==German==
 
 ===Adjective===
-{{head|de|adjective}}
+{{de-adj|blonder|blondesten}}
 
 # [[fair]] (light in color or pale)
 
