--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -54,7 +54,7 @@
 * {{ja-readings|on=[[さん]] ([[san]])|kun=[[かさ]] ([[kasa]])}}
 
 ====Compounds====
-* {{l|ja|日傘||parasol|tr=ひがさ, higasa|sc=Jpan}}
+* {{onym|ja|日傘|gloss=parasol|tr=ひがさ, higasa|sc=Jpan}}
 * [[傘屋]]
 * [[傘下]]
 * [[傘形碍子]]
