--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -38,6 +38,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Arabic: {{t-|ar|فرع|m|tr=farʿ|sc=Arab}}
 * Armenian: {{t-|hy|ճյուղ|tr=č̣yuġ}}, {{t-|hy|ոստ|tr=ost}}
 *: Old Armenian: {{tø|xcl|ճիւղ|tr=čiwł|sc=Armn|xs=Old Armenian}}, {{tø|xcl|ոստ|tr=ost|sc=Armn|xs=Old Armenian}}, {{tø|xcl|կողր|tr=kołr|sc=Armn|xs=Old Armenian}}
+* Belarusian: {{t|be|галіна|f|tr=halína|sc=Cyrl}}, {{t|be|галінка|f|tr=halínka|sc=Cyrl}}
 * Bulgarian: {{t+|bg|клон|m|tr=klon}}
 * Catalan: {{t+|ca|branca|f}}
 * Chinese:
@@ -61,11 +62,12 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Japanese: {{t+|ja|枝|tr=えだ, eda|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|branque|f}}
 * Kiput: {{tø|kyi|din}}
+* Korean: {{t|ko|나뭇가지|tr=namutgaji|sc=Kore}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
-{{trans-mid}}
 * Latgalian: {{tø|ltg|zors|m}}
 * Latin: {{t-|la|ramus|alt=rāmus}}
+{{trans-mid}}
 * Latvian: {{t+|lv|zars|m|xs=Latvian}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
 * Macedonian: {{t-|mk|гранка|n|tr=grànka}}
@@ -91,10 +93,11 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 * Tagalog: {{t-|tl|sanga|xs=Tagalog}}
 * Tamil: {{t+|ta|கிளை|tr=kiḷai|sc=Taml}}
-* Telugu: [[కొమ్మ]], [[శాఖ]]
+* Telugu: [[కొమ్మ]], [[శాఖ]], {{t|te|కొమ్మ|sc=Telu}}, {{t|te|శాఖ|sc=Telu}}
 * Tok Pisin: {{t+|tpi|han}}
 * Turkish: {{t+|tr|dal}}
 * Udi: {{tø|udi|чӀугъ}}
+* Ukrainian: {{t|uk|вітка|f|tr=vítka|sc=Cyrl}}, {{t|uk|галузь|f|tr=halúzʹ|sc=Cyrl}}, {{t|uk|галузка|f|tr=halúzka|sc=Cyrl}}
 * Vietnamese: {{t+|vi|nhánh|xs=Vietnamese}}
 * !Xóõ: [[gǀkxʻāa-kú]] (''small one'')
 {{trans-bottom}}
@@ -107,10 +110,11 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * German: (''branching roads or rivers'') {{t+|de|Abzweigung|m}}, (''rare'') {{t-|de|Ästelung|m}}, (''rare'') {{t-|de|Zweigung|m}}
 * Greek: {{t+|el|διακλάδωση|f|tr=diakládosi|sc=Grek}}, {{t+|el|κλάδος|m|tr=kládos|sc=Grek}}, {{t+|el|παρακλάδι|n|tr=parakládi|sc=Grek}}
 * Hebrew: {{t-|he|ענף|m|tr=anaf}}
-{{trans-mid}}
 * Hungarian: {{t-|hu|leágazás}}
 * Polish: {{t+|pl|rozgałęzienie|n}}
 * Portuguese: {{t+|pt|ramo|m}}, {{t+|pt|broto}}
+{{trans-mid}}
+* Russian: {{t|ru|ответвление|n|tr=otvetvlénije|sc=Cyrl}}, {{t|ru|ветка|f|tr=vétka|sc=Cyrl}}
 * Scots: {{tø|sco|brainch|xs=Scots}}
 * Scottish Gaelic: {{t-|gd|meur|f|xs=Scottish Gaelic}}
 * Serbian: [[grana]] {{f}}, [[vejka]] {{f}} (leafless branch)
@@ -138,7 +142,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Hungarian: {{t+|hu|fiók}}
 * Japanese: {{t-|ja|部門|tr=ぶもん, bumon|sc=Jpan}}, {{t-|ja|支店|tr=してん, shiten|sc=Jpan}}
 {{trans-mid}}
-* Korean: {{t+|ko|지점|tr=jijeom|sc=Kore}} ({{t+|ko|支店|sc=Kore}})
+* Korean: {{t+|ko|지점|tr=jijeom|sc=Kore}} ({{t+|ko|支店|sc=Kore}}), {{t|ko|지사|tr=jisa|sc=Kore}}, {{t|ko|支社|sc=Kore}}
 * Polish: {{t+|pl|oddział}}, {{t+|pl|filia}}
 * Portuguese: {{t+|pt|filial|f}}, {{t-|pt|departamanto}}, {{t+|pt|divisão}}, {{t+|pt|repartição}}
 * Romanian: {{t-|ro|filială|f}}, {{t+|ro|sucursală|f}}
