t+ko:[[가지]] t+ko:[[줄기]] ([[WT:EDIT|Assisted]]) <branch#18117111>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -62,7 +62,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Japanese: {{t+|ja|枝|tr=えだ, eda|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|branque|f}}
 * Kiput: {{tø|kyi|din}}
-* Korean: {{t|ko|나뭇가지|tr=namutgaji|sc=Kore}}
+* Korean: {{t|ko|나뭇가지|tr=namutgaji|sc=Kore}}, {{t|ko|가지|tr=gaji|sc=Kore}}, {{t|ko|줄기|tr=julgi|sc=Kore}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
 * Latgalian: {{tø|ltg|zors|m}}
