--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -67,8 +67,8 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 *: Sorani: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
 * Latgalian: {{tø|ltg|zors|m}}
 * Latin: {{t-|la|ramus|alt=rāmus}}
-{{trans-mid}}
 * Latvian: {{t+|lv|zars|m|xs=Latvian}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
 * Macedonian: {{t-|mk|гранка|n|tr=gránka}}
 * Malay: {{t-|ms|dahan}}
@@ -80,7 +80,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Portuguese: {{t+|pt|galho|m}}, {{t+|pt|ramo}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}
 * Romansch: {{t-|rm|rom|m}}, {{t-|rm|ram|m}}
-* Russian: {{t+|ru|ветвь|f|tr=vetvʹ|sc=Cyrl}}, {{t+|ru|ветка|f|tr=vétka|sc=Cyrl}}
+* Russian: {{t+|ru|ветвь|f|tr=vetvʹ|sc=Cyrl}}, {{t+|ru|ветка|f|tr=vétka|sc=Cyrl}}, {{t|ru|веточка|f|tr=vétočka|sc=Cyrl}} {{qualifier|small twig}}
 * Sardinian: {{t-|sc|nae}}, {{t-|sc|nai}}
 * Scots: {{tø|sco|beuch|xs=Scots}}
 * Scottish Gaelic: {{t-|gd|meur|f|xs=Scottish Gaelic}}
@@ -97,7 +97,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Tok Pisin: {{t+|tpi|han}}
 * Turkish: {{t+|tr|dal}}
 * Udi: {{tø|udi|чӀугъ}}
-* Ukrainian: {{t|uk|вітка|f|tr=vítka|sc=Cyrl}}, {{t|uk|галузь|f|tr=halúzʹ|sc=Cyrl}}, {{t|uk|галузка|f|tr=halúzka|sc=Cyrl}}
+* Ukrainian: {{t|uk|вітка|f|tr=vítka|sc=Cyrl}}, {{t|uk|галузь|f|tr=halúzʹ|sc=Cyrl}}, {{t|uk|галузка|f|tr=halúzka|sc=Cyrl}}, {{t|uk|гілка|f|tr=hílka|sc=Cyrl}}, {{t|uk|гілочка|f|tr=híločka|sc=Cyrl}}
 * Vietnamese: {{t+|vi|nhánh|xs=Vietnamese}}
 * !Xóõ: [[gǀkxʻāa-kú]] (''small one'')
 {{trans-bottom}}
