--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Czech: {{t+|cs|žaludek|m}}
 * Danish: {{t-|da|bug|c}}
 * Dutch: {{t+|nl|maag|f}}
+* Esperanto: {{t|eo|stomako}}
 * Estonian: {{t-|et|kõht}}, {{t-|et|magu}}
 * Finnish: {{t+|fi|mahalaukku}}, {{t+|fi|vatsalaukku}}
 * French: {{t+|fr|estomac|m}}
@@ -79,8 +80,8 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
 * Khmer: {{t+|km|ក្រពះ|tr=krɑpeah|sc=Khmr}}
 * Korean: {{t+|ko|위|tr=wi|sc=Kore}} ([[胃]])
-* Lao: {{t+|lo|ກະເພາະ|tr=ka phǫ|sc=Laoo}}
 {{trans-mid}}
+* Lao: {{t+|lo|ກະເພາະ|tr=ka phǫ|sc=Laoo}}
 * Latgalian: {{tø|ltg|pasirds}}
 * Latin: [[stomachus]] {{m}}
 * Latvian: {{t-|lv|kuņģis|m}}
