--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -73,7 +73,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Hindi: {{t-|hi|अमाशय|m|tr=amāśay|sc=Deva}}
 * Hungarian: {{t+|hu|gyomor}}
 * Icelandic: {{t+|is|magi|m}}
-* Ido: [[stomako]]
+* Ido: {{t|io|stomako}}
 * Indonesian: {{t+|id|perut}}
 * Italian: {{t+|it|stomaco|m}}
 * Japanese: {{t+|ja|胃|tr=い, i|sc=Jpan}}, {{t+|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t+|ja|腹|tr=はら, hara|sc=Jpan}}
