--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -238,7 +238,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 ==Catalan==
 
 ===Noun===
-{{ca-noun|m|costos}}
+{{ca-noun|m|costs}}
 
 # {{l|en|cost}}
 
