--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -89,12 +89,13 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * German: {{t+|de|Fleisch|n}}
 * Greek: {{t+|el|κρέας|n|tr=kréas|sc=Grek}}
 * Hungarian: {{t+|hu|hús}}
-{{trans-mid}}
 * Irish: {{t+|ga|feoil|f|xs=Irish}}
+{{trans-mid}}
 * Latvian: {{t-|lv|miesa|f}}
 * Pashto: {{t+|ps|غوښه|f|tr=γwəxa|sc=ps-Arab|xs=Pashto}}
 * Russian: {{t+|ru|мясо|n}}, {{t+|ru|плоть|f}}
 * Scottish Gaelic: [[feòil]] {{f}}
+* Spanish: {{t|es|carne|f}}
 * Swahili: {{t+|sw|kinofu|xs=Swahili}}
 * Swedish: {{t+|sv|kött|n}}
 * Tok Pisin: {{t-|tpi|mit}}
@@ -107,10 +108,11 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * French: {{t+|fr|corps}}
 * German: {{t+|de|Fleisch|n}}, {{t+|de|Leib|m}}
 * Greek: {{t+|el|σάρκα|f|tr=sárka|sc=Grek}}
-{{trans-mid}}
 * Ido: [[korpo]]
+{{trans-mid}}
 * Latvian: {{t-|lv|ķermenis|m}}
 * Scottish Gaelic: [[feòil]] {{f}}, [[craiceann]] {{m}}
+* Spanish: {{t|es|carne|f}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
 * Tok Pisin: {{t-|tpi|mit}}
 {{trans-bottom}}
@@ -123,6 +125,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Greek: {{t+|el|δέρμα|n|tr=dérma|sc=Grek}}
 {{trans-mid}}
 * Scottish Gaelic: [[craiceann]] {{m}}
+* Spanish: {{t|es|pellejo|m}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
 * Tok Pisin: {{t-|tpi|skin}}
 * Volapük: {{t+|vo|skin}}
@@ -136,11 +139,12 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * French: {{t+|fr|pulpe}}
 * German: {{t+|de|Fleisch|n}}, {{t+|de|Fruchtfleisch|n}}
 * Greek: {{t+|el|σάρκα|f|tr=sárka|sc=Grek}}
-{{trans-mid}}
 * Ido: [[pulpo]]
+{{trans-mid}}
 * Polish: {{t+|pl|miąższ|m}}
 * Russian: [[мякоть]] {{f}}
 * Scottish Gaelic: [[feòil]] {{f}}
+* Spanish: {{t|es|carne|f}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
 * Telugu: [[గుజ్జు]] (gujju)
 * Volapük: {{t-|vo|flukapulp}}, {{t-|vo|pulp}}
