--- a/en/c/clung.6836.wikitext
+++ b/en/c/clung.6836.wikitext
@@ -51,6 +51,11 @@
 ** [[ぶら下げられた]] ([[ぶらさげられた]], burasagerareta)
 {{trans-bottom}}
 
+===Adjective===
+{{en-adj}}
+
+# {{obsolete}} [[waste away|wasted away]]; [[shrunken]]
+
 [[de:clung]]
 [[el:clung]]
 [[fa:clung]]
