--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -61,15 +61,18 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 * Czech: {{t+|cs|nadhlavník|m}}, {{t+|cs|zenit|m}}
 * Finnish: {{t-|fi|zeniitti}}
 * French: {{t+|fr|zénith|m}}
-{{trans-mid}}
 * German: {{t+|de|Zenit|m}}
 * Italian: {{t-|it|zenit|m}}
+{{trans-mid}}
 * Japanese: {{t|ja|天頂|tr=てんちょう, tenchō}}
 * Manx: {{t|gv|ard-niau}}
 * Polish: {{t+|pl|zenit|m}}, {{t-|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zênite|m}}
 * Romanian: {{t+|ro|dric|m|tr=drik}}
 * Russian: {{t+|ru|зенит|m|tr=zenít}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|зенит|m}}
+*: Roman: {{t|sh|zenit|m}}
 * Spanish: {{t+|es|cenit|m}}
 {{trans-bottom}}
 
