t+ka:[[უკრავს]] ([[WT:EDIT|Assisted]]) <play#18169976>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -332,7 +332,7 @@
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
 * Finnish: {{t+|fi|soittaa}}
 * French: [[jouer]] [[de]]
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|უკრავს|sc=Geor}}
 * Greek: {{t+|el|παίζω|tr=pézo}}
 * Hebrew: {{t-|he|ניגן|alt=ניגן (ב־)|tr=nigén (b'-)}}
 * Hindi: {{t-|hi|बजाना|tr=bajānā|sc=Deva}}
