t+ae:[[ǰamaiti]] ([[WT:EDIT|Assisted]]) <come#18173806>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -81,6 +81,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 *: Egyptian Arabic: {{tø|arz|جا|tr=gaa|sc=Arab}}
 * Armenian: {{t+|hy|գալ|tr=gal|sc=Armn}}
 * Aromanian: {{t-|rup|yin}}
+* Avestan: {{tø|ae|ǰamaiti}}
 * Bakhtiari: {{tø|bqi|اودن|tr=aweðen|sc=fa-Arab}}
 * Basque: [[etorri]]
 * Bavarian: [[kemma]]
