t+fa:[[رسیدن]] ([[WT:EDIT|Assisted]]) <come#18173814>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -169,6 +169,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 {{trans-mid}}
 * Hungarian: {{t+|hu|megjön}}, {{t+|hu|jön}}
 * Norwegian: {{t-|no|ankomme}}, {{t+|no|komme}}
+* Persian: {{t|fa|رسیدن|tr=ra(e)sidan|sc=fa-Arab}}
 * Scottish Gaelic: {{t-|gd|thig|xs=Scottish Gaelic}}
 * Tunisian Arabic: {{tø|aeb|وصل|tr=wuṣil|sc=Arab}}
 * Zulu: {{t|zu|fika|alt=-fika}}
