Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <tortoise#18174123>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -30,10 +30,10 @@
 * Azeri: {{qualifier|tortoise or turtle}} {{t+|az|tısbağa}}
 * Belarusian: {{qualifier|tortoise or turtle}} {{t-|be|чарапаха|f|tr=čarapáxa|sc=Cyrl}}
 * Bengali: {{qualifier|tortoise or turtle}} {{t-|bn|কাছিম|tr=kachim|sc=Beng}}
-* Breton: [[baot]] {{f}}, baoted {{p}}, [[baot]] douar
+* Breton: {{t|br|baot|f}}, {{t|br|baoted|p}}, {{t|br|baot douar}}
 * Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
 * Burmese: {{qualifier|tortoise or turtle}} {{t+|my|လိပ်|tr=lei|sc=Mymr}}
-* Catalan: [[tortuga]] {{f}}
+* Catalan: {{t|ca|tortuga|f}}
 * Chinese:
 *: Mandarin: {{qualifier|tortoise or turtle}} {{t|zh|龜|sc=Hani}}, {{t|zh|龟|tr=guī|sc=Hani}}, {{t|zh|烏龜|sc=Hani}}, {{t|zh|乌龟|tr=wūguī|sc=Hani}}, {{t+|zh|王八|tr=wángba|sc=Hani}}, {{t|zh|草龜|sc=Hani}}, {{t|zh|草龟|tr=cǎoguī|sc=Hani}}
 * Czech: {{t+|cs|želva}}
