--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -509,6 +509,9 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{etyl|gmq-mno|no}} {{te
 
 ==Romanian==
 
+===Etymology 1===
+From {{etyl|fr|ro}} {{term|port|lang=fr}}, {{etyl|it|ro}} {{term|porto|lang=it}}.
+
 ===Noun===
 {{ro-noun|n|porturi}}
 
@@ -522,6 +525,14 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{etyl|gmq-mno|no}} {{te
 
 ====See also====
 * [[liman]]
+
+===Etymology 2===
+
+===Verb===
+'''port'''
+
+# {{ro-form-verb|1s|pres|purta}}
+# {{ro-form-verb|1s|sub|purta}}
 
 ----
 
