--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -92,8 +92,9 @@
 * Finnish: {{t+|fi|huovittaa}}
 {{trans-bottom}}
 
-{{checktrans}}
+{{checktrans-top}}
 * {{ttbc|sv}}: [[filta]]
+{{trans-mid}}
 {{trans-bottom}}
 
 ===Etymology 2===
