--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -32,7 +32,7 @@
 * Czech: {{t+|cs|plsť|f}}
 * Danish: {{t-|da|filt|n}}
 * Dutch: {{t+|nl|vilt|n}}
-* Esperanto: {{t-|eo|felto|xs=Esperanto}}
+* Esperanto: {{t-|eo|felto}}
 * Finnish: {{t+|fi|huopa}}
 * French: {{t+|fr|feutre|m}}, {{t+|fr|feutrine|f}}
 * Galician: {{t|gl|feltro|m}}
@@ -40,7 +40,7 @@
 {{trans-mid}}
 * Greek: {{t+|el|κετσές|m|tr=ketsés|sc=Grek}}
 * Hebrew: {{t+|he|לבד|m|tr=léved}}
-* Ido: {{t+|io|felto|xs=Ido}}
+* Ido: {{t+|io|felto}}
 * Italian: {{t+|it|feltro|m}}
 * Japanese: {{t-|ja|フェルト|tr=feruto|sc=Jpan}}, {{t-|ja|羅紗|tr=らしゃ, rasha|sc=Jpan}}
 * Luxembourgish: {{t-|lb|Filz|m}}
@@ -127,7 +127,6 @@
 ==Danish==
 
 ===Etymology 1===
-
 From {{etyl|gml|da}} {{term|velt|lang=gml}}, from {{proto|Indo-European|pelh₂-|flat|lang=da}}.
 
 Gender changed by influence from {{term|mark|lang=da}}.
@@ -161,7 +160,6 @@ Gender changed by influence from {{term|mark|lang=da}}.
 {{rel-bottom}}
 
 ===Etymology 2===
-
 From {{etyl|de|da}} {{term|Feld|lang=de}}, from {{etyl|goh|da}} {{term|feld|lang=goh}}, from {{proto|Indo-European|pelh₂-|flat|lang=da}}.
 
 ====Noun====
