auto-format <speak#18180123>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -10,7 +10,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * {{enPR|spēk}}, {{IPA|/spiːk/}}, {{X-SAMPA|/spi:k/}}
 * {{audio|en-us-speak.ogg|Audio (US)}}
 * {{audio|En-uk-to speak.ogg|Audio (UK)}}
-*: {{rhymes|iːk}}
+* {{rhymes|iːk}}
 
 ===Verb===
 {{en-verb|'''[[speaks]]''' ''or {{archaic}}'' '''[[speaketh]]'''|speaking|'''[[spoke]]''' ''or {{archaic}}'' '''[[spake]]'''|spoken}}
@@ -81,50 +81,50 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 
 ====Translations====
 {{trans-top|to communicate with one's voice using words}}
-* Afrikaans: {{t-|af|praat|xs=Afrikaans}}
-* Arabic: {{t|ar|تحدث|tr=taḥáddaṯa}},  {{t|ar|تكلم|tr=takállama}}
+* Afrikaans: {{t-|af|praat}}
+* Arabic: {{t|ar|تحدث|tr=taḥáddaṯa}}, {{t|ar|تكلم|tr=takállama}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
 * Asturian: {{t|ast|falar}}
 * Azeri: {{t|az|danışmaq}}
-* Belarusian: {{t|be|гаварыць|tr=havarýc’|xs=Belarusian}},  {{t|be|размаўляць|tr=razmaŭljác’|xs=Belarusian}}
-* Bengali: {{t-|bn|বলা|tr=bôla|sc=Beng|xs=Bengali}}
+* Belarusian: {{t|be|гаварыць|tr=havarýc’}}, {{t|be|размаўляць|tr=razmaŭljác’}}
+* Bengali: {{t-|bn|বলা|tr=bôla|sc=Beng}}
 * Breton: {{t|br|komz}}
 * Bulgarian: {{t+|bg|говоря|tr=govorja}} (1, 6)
 * Burmese: {{t|my|ပြော|tr=pyaw:|sc=Mymr}}, {{qualifier|formal}} {{t|my|မြွက်|tr=mywet|sc=Mymr}}
 * Catalan: {{t|ca|parlar}}
 * Chinese:
-*: Mandarin: {{t-|cmn|說|sc=Hani}},  {{t-|cmn|说|tr=shuō|sc=Hani}},  {{t|cmn|說話|sc=Hani}},  {{t-|cmn|说话|tr=shuōhuà|sc=Hani}},  {{t-|cmn|講|sc=Hani}},  {{t-|cmn|讲|tr=jiǎng|sc=Hani}}
-* Czech: {{t+|cs|mluvit}},  {{t-|cs|hovořit}}
+*: Mandarin: {{t-|cmn|說|sc=Hani}}, {{t-|cmn|说|tr=shuō|sc=Hani}}, {{t|cmn|說話|sc=Hani}}, {{t-|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t-|cmn|講|sc=Hani}}, {{t-|cmn|讲|tr=jiǎng|sc=Hani}}
+* Czech: {{t+|cs|mluvit}}, {{t-|cs|hovořit}}
 * Dalmatian: {{t|dlm|faular}}
 * Danish: {{t|da|tale}} (1, 2, 3, 4, 5, 6, 7)
 * Dutch: {{t+|nl|spreken}}
-* Esperanto: {{t-|eo|paroli|xs=Esperanto}}
+* Esperanto: {{t-|eo|paroli}}
 * Estonian: {{t-|et|rääkima}}
 * Finnish: {{t+|fi|puhua}}
 * French: {{t+|fr|parler}}
 * Georgian: {{t|ka|ლაპარაკი|tr=laparaki|sc=Geor}}
-* German: {{t+|de|sprechen}},  {{t+|de|reden}}
+* German: {{t+|de|sprechen}}, {{t+|de|reden}}
 * Greek: {{t+|el|μιλώ|tr=miló}}, {{t+|el|λέω|tr=léo}}
 * Guaraní: [[ñe'ẽ]]
 * Guernésiais: {{tø|roa-grn|parlaïr}}
 * Hebrew: {{t+|he|דיבר|tr=dibér}}
-* Hindi: {{t+|hi|बोलना|tr=bolnā|xs=Hindi}}
+* Hindi: {{t+|hi|बोलना|tr=bolnā}}
 * Hungarian: {{t+|hu|beszél}}
 * Indonesian: [[bicara|berbicara]], [[pidato|berpidato]]
 * Interlingua: {{t|ia|parlar}}
 * {{trreq|ie}}
 * Irish: {{t|ga|labhair}}
 * Italian: {{t+|it|parlare}}
-* Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t-|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=[[いう]], iu}},  {{t+|ja|しゃべる|tr=shaberu}}
+* Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t-|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=[[いう]], iu}}, {{t+|ja|しゃべる|tr=shaberu}}
 * Kazakh: {{t|kk|айту|tr=aytu|sc=Cyrl}}, {{t|kk|сөйлеу|tr=söylew|sc=Cyrl}}, {{t|kk|сөйлесу|tr=söylesw|sc=Cyrl}}
 * Khmer: {{t|km|និយាយ|tr=niʔyiey|sc=Khmr}}
 * Korean: {{t+|ko|말하다|tr=malhada|sc=Hang}}
 * Lao: {{t|lo|ເວົ້າ|tr=waw|sc=Laoo}}
 * Latgalian: {{tø|ltg|runuot}}
-* Latin: {{t+|la|dico|alt=dīcō}},  {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}, {{t|la|for}}, {{t|la|effor}}
+* Latin: {{t+|la|dico|alt=dīcō}}, {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}, {{t|la|for}}, {{t|la|effor}}
 * Latvian: {{t|lv|runāt}}
 {{trans-mid}}
-* Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
+* Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t|jbo|tavla}}
 * Luxembourgish: {{t|lb|schwätzen}}
 * Macedonian: {{t|mk|зборува|tr=zboruva}}
@@ -136,37 +136,37 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Ngarrindjeri: {{tø|nay|kungun}}
 * Norwegian: {{t+|no|snakke}}
 * Occitan: {{t|oc|parlar}}
-* Persian: {{t+|fa|حرف زدن|tr=harf zadan|xs=Persian}}
+* Persian: {{t+|fa|حرف زدن|tr=harf zadan}}
 * Pipil: {{tø|ppl|taketza}}, {{tø|ppl|taquetza}}
 * Polish: {{t+|pl|mówić}}
 * Portuguese: {{t+|pt|falar}}
-* Punjabi: {{t|pa|ਬੋਲਣਾ|sc=Guru|xs=Punjabi}}
+* Punjabi: {{t|pa|ਬੋਲਣਾ|sc=Guru}}
 * Romanian: {{t+|ro|vorbi}}, {{t+|ro|discuta}}
-* Romansch: [[pledar]],  [[tschantschar]]
-* Russian: {{t+|ru|говорить|tr=govorít’}} {{impf}},  {{t+|ru|разговаривать|tr=razgovárivat’}} {{impf}}
+* Romansch: [[pledar]], [[tschantschar]]
+* Russian: {{t+|ru|говорить|tr=govorít’}} {{impf}}, {{t+|ru|разговаривать|tr=razgovárivat’}} {{impf}}
 * Santali: {{tø|sat|ᱨᱳᱲ|tr=rorr|sc=Olck}}
 * Scottish Gaelic: [[bruidhinn]]
-* Serbo-Croatian: {{t|sh|говорити|sc=Cyrl|xs=Serbo-Croatian}},  {{t|sh|govoriti|xs=Serbo-Croatian}}
-* Sicilian: {{t+|scn|parrari|xs=Sicilian}},  {{t|scn|parlari|xs=Sicilian}}
-* Slovak: {{t-|sk|hovoriť}},  {{t|sk|rozprávať}}
+* Serbo-Croatian: {{t|sh|говорити|sc=Cyrl}}, {{t|sh|govoriti}}
+* Sicilian: {{t+|scn|parrari}}, {{t|scn|parlari}}
+* Slovak: {{t-|sk|hovoriť}}, {{t|sk|rozprávať}}
 * Slovene: {{t+|sl|govoriti}}
-* Sotho: {{t+|st|bua|xs=Sotho}}
+* Sotho: {{t+|st|bua}}
 * Spanish: {{t+|es|hablar}}
-* Swahili: {{t-|sw|ongea|xs=Swahili}}
-* Swedish: {{t+|sv|tala}},  {{t+|sv|prata}}, {{t|sv|snacka}}
+* Swahili: {{t-|sw|ongea}}
+* Swedish: {{t+|sv|tala}}, {{t+|sv|prata}}, {{t|sv|snacka}}
 * Tagalog: [[magsalita]]
 * Tajik: {{t|tg|ҳарф задан|tr=harf zadan|sc=Cyrl}}
 * Thai: {{t+|th|พูด|tr=pôot}}
 * Tupinambá: [[nhe'eng]]
 * Turkish: {{t+|tr|konuşmak}}
-* Ukrainian: {{t-|uk|говорити|tr=hovorýty|xs=Ukrainian}},  {{t|uk|розмовляти|tr=rozmovljáty|xs=Ukrainian}}
-* Urdu: {{t-|ur|بولنا|tr=bolnā|xs=Urdu}}
-* Uzbek: {{t|uz|gaplashmoq|xs=Uzbek}}
-* Vietnamese: {{t+|vi|nói|xs=Vietnamese}}, {{t|vi|nói chuyện}}, {{t|vi|nói được}}
+* Ukrainian: {{t-|uk|говорити|tr=hovorýty}}, {{t|uk|розмовляти|tr=rozmovljáty}}
+* Urdu: {{t-|ur|بولنا|tr=bolnā}}
+* Uzbek: {{t|uz|gaplashmoq}}
+* Vietnamese: {{t+|vi|nói}}, {{t|vi|nói chuyện}}, {{t|vi|nói được}}
 * Volapük: {{t|vo|spikön}}
 * Welsh: {{t|cy|siarad}}, {{t|cy|llefaru}}
-* West Frisian: {{t-|fy|sprekke|xs=West Frisian}}
-* Yiddish: {{t+|yi|רעדן|tr=redn|sc=Hebr|xs=Yiddish}}
+* West Frisian: {{t-|fy|sprekke}}
+* Yiddish: {{t+|yi|רעדן|tr=redn|sc=Hebr}}
 * Zulu: [[ukukhuluma]] (ugukuluma)
 {{trans-bottom}}
 
