/* Verb */ duh <speak#18180124>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -13,7 +13,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * {{rhymes|iːk}}
 
 ===Verb===
-{{en-verb|'''[[speaks]]''' ''or {{archaic}}'' '''[[speaketh]]'''|speaking|'''[[spoke]]''' ''or {{archaic}}'' '''[[spake]]'''|spoken}}
+{{en-verb|'''[[speaks]]''' ''or {{qualifier|archaic}}'' '''[[speaketh]]'''|speaking|'''[[spoke]]''' ''or {{qualifier|archaic}}'' '''[[spake]]'''|spoken}}
 
 # {{intransitive}} To [[communicate]] with one's [[voice]], to [[say]] [[word]]s [[out loud]].
 #: ''I was so surprised I couldn't '''speak'''.''
