--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -65,7 +65,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 {{trans-bottom}}
 
 {{trans-top|of a gem, carved into a shape}}
-* Danish: [[slibe|slebet]]
+* Danish: {{t|da|slebet}}
 * Dutch: {{t+|nl|geslepen}}
 * Finnish: {{t+|fi|hioa|alt=hiottu}}
 * French: {{t+|fr|taillé}}
