--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -81,11 +81,11 @@
 * Bengali: {{t-|bn|চোষা|tr=cosha|sc=Beng|xs=Bengali}}
 * Bulgarian: {{t+|bg|смуча|tr=smuča}}
 * Burmese: {{t+|my|စုပ်|tr=sok|sc=Mymr}}
-* Catalan: [[xuclar]]
+* Catalan: {{t|ca|xuclar}}
 * Czech: {{t-|cs|sát}}, {{t-|cs|nasávat}}
 * Dutch: {{t+|nl|zuigen}}
 * Esperanto: {{t-|eo|suĉi|xs=Esperanto}}
-* Ewe: [[nyi]]
+* Ewe: {{t|ee|nyi}}
 * Finnish: {{t+|fi|imeä}}, {{t-|fi|lutkuttaa}}
 * French: {{t+|fr|sucer}}
 * Friulian: {{tø|fur|supâ}}
@@ -94,10 +94,10 @@
 * German: {{t+|de|saugen}}
 * Hindi: {{t-|hi|चूसना|tr=cūsnā|xs=Hindi}}
 * Hungarian: {{t+|hu|szopik}}
-* Italian: [[succhiare]], [[suggere]]
-* Japanese: {{t-|ja|吸う|tr=すう, suu}},  {{t-|ja|しゃぶる|tr=shaburu}}
-* Korean: [[빨다]] (ppalda)
-* Kurdish: [[mêjîn]], [[mêtin]], {{ku-Arab|[[مژین]]}}
+* Italian: {{t|it|succhiare}}, {{t|it|suggere}}
+* Japanese: {{t-|ja|吸う|tr=すう, suu}}, {{t-|ja|しゃぶる|tr=shaburu}}
+* Korean: {{t|ko|빨다|tr=ppalda}}
+* Kurdish: {{t|ku|mêjîn}}, {{t|ku|mêtin}}, {{ku-Arab|[[مژین]]}}
 * Latin: {{t+|la|sugo}}
 {{trans-mid}}
 * Latvian: {{t+|lv|sūkt}}
@@ -111,16 +111,16 @@
 * Rapa Nui: {{tø|rap|omo}}
 * Romanian: {{t+|ro|suge}}
 * Romansch: {{t-|rm|tschitschar|xs=Romansch}}
-* Russian: [[сосать]] (sosát’), [[всасывать]] (vsásyvat’)
+* Russian: {{t|ru|сосать|tr=sosát’|sc=Cyrl}}, {{t|ru|всасывать|tr=vsásyvat’|sc=Cyrl}}
 * Scottish Gaelic: {{t-|gd|deoghail}}
-* Serbo-Croatian:
+* Serbo-Croatian: 
 *: Cyrillic: {{t-|sh|сисати|alt=си̏сати}}
 *: Roman: {{t-|sh|sisati|alt=sȉsati}}
-* Slovak: [[cmúľať]]
-* Spanish: {{t+|es|chupar}},  {{t+|es|sorber}}
+* Slovak: {{t|sk|cmúľať}}
+* Spanish: {{t+|es|chupar}}, {{t+|es|sorber}}
 * Swedish: {{t+|sv|suga}}
 * Tajik: {{t-|tg|макидан|tr=makidan|sc=Cyrl|xs=Tajik}}
-* Telugu: [[చీకు]] (cheeku)
+* Telugu: {{t|te|చీకు|tr=cheeku}}
 * Thai: {{t-|th|ดูด|sc=Thai}} (dūd)
 * Turkish: {{t+|tr|emmek}}
 * Ukrainian: {{t-|uk|смоктати|tr=smoktáty|xs=Ukrainian}}, {{t-|uk|ссати|tr=ssáty|xs=Ukrainian}}
@@ -134,25 +134,25 @@
 {{trans-top|colloquial: term of general disparagement}}
 * Bulgarian: {{t+|bg|духам|tr=dukham}}
 * Finnish: {{t+|fi|haista}}, {{t-|fi|olla syvältä}}
-* French: [[être]] [[chiant]]
-* German: [[mies]] [[sein]], [[zum]] [[kotzen|Kotzen]] [[sein]], [[Scheiße]] [[sein]]
+* French: {{t|fr|être chiant}}
+* German: {{t|de|mies sein}}, {{t|de|zum Kotzen sein}}, {{t|de|Scheiße sein}}
 * Hindi: (laayak)
-* Icelandic: {{t-|is|sökka}},  {{t+|is|ömurlegur|m}}
+* Icelandic: {{t-|is|sökka}}, {{t+|is|ömurlegur|m}}
 {{trans-mid}}
-* Italian: [[essere una schiappa]], [[fare schifo]]
+* Italian: {{t|it|essere una schiappa}}, {{t|it|fare schifo}}
 * Japanese: {{t-|ja|サック|tr=sakku|sc=Jpan}}
 * Norwegian: {{t-|no|suge}}
-* Portuguese: [[saco]] {{qualifier|vulgar}}
-* Russian: [[отстой]] (otstój) ''(noun)''
+* Portuguese: {{t|pt|saco}} {{qualifier|vulgar}}
+* Russian: {{t|ru|отстой|tr=otstój|sc=Cyrl}} ''(noun)''
 * Swedish: {{t+|sv|suga}}
 {{trans-bottom}}
 
 {{trans-top|colloquial: with at, indicates a particular area of deficiency}}
-* Bulgarian: [[духам]] (dukham)
-* French: [[être]] [[chiant]] [[en]]
+* Bulgarian: {{t|bg|духам|tr=dukham}}
+* French: {{t|fr|être chiant en}}
 * Hindi: (bakwaas)
 {{trans-mid}}
-* Italian: [[fare schifo a]]
+* Italian: {{t|it|fare schifo a}}
 * Norwegian: {{t-|no|suge}}
 * Swedish: {{t+|sv|suga}}
 {{trans-bottom}}
