--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -6,9 +6,10 @@
 From {{etyl|enm}} {{term|comen|lang=enm}}, {{term|cumen|lang=enm}}, from {{etyl|ang}} {{term|coman|lang=ang}}, {{term|cuman||to come, go, happen|lang=ang}}, from {{proto|Germanic|kwemanan|to come|lang=en}}, from {{proto|Indo-European|gʷem-||gʷem-ye-|to come, go, be born|lang=en}}. Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|frs|-}} {{term|cuma||to come|lang=frs}}, {{etyl|fy|-}} {{term|komme||to come|lang=fy}}, {{etyl|nl|-}} {{term|komen||to come|lang=nl}}, {{etyl|de|-}} {{term|kommen||to come|lang=de}}, {{etyl|da|-}} {{term|komme||to come|lang=da}}, {{etyl|sv|-}} {{term|komma||to come|lang=sv}}, {{etyl|is|-}} {{term|koma||to come|lang=is}}, Latin {{term|venio|veniō|come, arrive|lang=la}}, Lithuanian {{term|gimti||to be born, come into the world, arrive|lang=lt}}, Avestan {{term|||tr=ǰamaiti|to go|lang=ae}}, Sanskrit {{term|sc=Deva|गच्छति||tr=gácchati|to go|lang=sa}}.
 
 ===Pronunciation===
-* {{enPR|kŭm}}, {{IPA|/kʌm/}}, {{X-SAMPA|/kVm/}}
-* {{audio|en-us-come.ogg|Audio (US)}}
+* {{a|UK}} {{IPA|/kʌm/|[kʰɐm]}}, {{enPR|kŭm}}, {{X-SAMPA|/kVm/|[k_h6m]}}
 * {{audio|En-uk-to come.ogg|Audio (UK)}}
+* {{a|US}} {{IPA|/kʌm/|[kʰʌm]}}, {{enPR|kŭm}}, {{X-SAMPA|/kVm/|[k_hVm]}}
+* {{audio|en-us-come.ogg|Audio (US)}}
 * {{rhymes|ʌm}}
 * Homophones: [[cum]]
 
