t+fi:[[tuntea]] t+fi:[[tuntua]] t+fi:[[tunnustella]] ([[WT:EDIT|Assisted]]) <feel#18242579>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -82,6 +82,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Czech: {{t+|cs|cítit}}
 * Dalmatian: {{t|dlm|senter}}
 * Danish: {{t-|da|føle}}, {{t-|da|mærke}}
+* Finnish: {{t|fi|tuntea}}
 * French: {{t+|fr|palper}}, {{t+|fr|toucher}}
 * Friulian: {{t|fur|sintî}}
 * German: {{t+|de|fühlen}}, {{t+|de|spüren}}
@@ -115,6 +116,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Dalmatian: {{t|dlm|senter}}
 * Danish: {{t-|da|føle}}
 * Esperanto: {{t-|eo|senti}}
+* Finnish: {{t|fi|tuntea}}
 * French: {{t+|fr|sentir}}
 * Friulian: {{t|fur|sintî}}
 * German: {{t+|de|fühlen}}, {{t+|de|spüren}}
@@ -145,6 +147,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Chinese:
 *: Mandarin: {{t|zh|覺得|sc=Hani}}, {{t|zh|觉得|tr=juéde|sc=Hani}}, {{t|zh|感覺|sc=Hani}}, {{t|zh|感觉|tr=gǎnjué|sc=Hani}}
 * Czech: {{t+|cs|cítit}}
+* Finnish: {{t|fi|tuntea}}, {{t|fi|tuntua}}
 * French: {{t+|fr|sentir}}, {{t+|fr|penser}}
 * German: {{t+|de|fühlen}}, {{t+|de|denken}}, {{t-|de|das Gefühl haben}}
 {{trans-mid}}
@@ -161,12 +164,14 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Arabic: {{t-|ar|تحسس}}
 * Bulgarian: {{t+|bg|опипвам|sc=Cyrl}}
 {{trans-mid}}
+* Finnish: {{t|fi|tunnustella}}
 * Norwegian: {{t+|no|kjenne|alt=kjenne etter}}, {{t+|no|føle}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: to experience an emotion or other mental state}}
 * Arabic: {{t-|ar|شعر ب}}
 * Bulgarian: {{t+|bg|чувствам|sc=Cyrl}}
+* Finnish: {{t|fi|tuntea}}
 * French: {{t+|fr|éprouver}}
 * German: {{t-|de|sich fühlen}}
 {{trans-mid}}
@@ -177,6 +182,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 {{trans-bottom}}
 
 {{trans-top|copulative: to seem}}
+* Finnish: {{t|fi|tuntua}}
 * Norwegian: {{t|no|føle}}
 {{trans-mid}}
 * Spanish: {{t+|es|parecer}}
