--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -39,7 +39,7 @@ Also simplification of [[詹]], as in [[担]].
 ==Goguryeo==
 
 ===Noun===
-{{head|zkg|noun|tr=dani}}
+{{head|zkg|noun|tr=dan}}
 
 # a [[valley]]
 
