--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -6,9 +6,9 @@
 
 ===Etymology===
 {{rfscript|Deva}}
-From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||blund|a mixed color between golden and light-brown|lang=frk}}, from {{proto|Germanic|blundaz|mixed, blinding|lang=en}}, from {{proto|Indo-European|bʰlendʰ-|to become turbid, see badly, go blind|lang=en}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|grey-haired|lang=ang}}, {{etyl|ang|-}} {{term|blandan||to mix|lang=ang}}. More at {{l|en|blend}}.
+From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} {{recons|blund|blund|a mixed color between golden and light-brown|lang=frk}}, from {{proto|Germanic|blundaz|mixed, blinding|lang=en}}, from {{proto|Indo-European|bʰlendʰ-|to become turbid, see badly, go blind|lang=en}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|grey-haired|lang=ang}}, {{etyl|ang|-}} {{term|blandan||to mix|lang=ang}}. More at {{l|en|blend}}.
 
-Alternate etymology connects {{etyl|frk|-}} *''blund'' to {{proto|Germanic|blundaz|blond|lang=en}}, from {{proto|Indo-European|bʰl̥ndʰ-||bʰlendʰ-|blond, red-haired|lang=en}}. Cognate with {{etyl|sa|-}} {{term|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish|lang=sa}}.
+Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{proto|Germanic|blundaz|blond|lang=en}}, from {{proto|Indo-European|bʰl̥ndʰ-||bʰlendʰ-|blond, red-haired|lang=en}}. Cognate with {{etyl|sa|-}} {{term|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish|lang=sa}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
