--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -48,12 +48,7 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 # To [[begin]] [[building]].
 # To start some type of [[organization]] or [[company]].
 
-====References====
-* Oxford Online Dictionary, found
-* WordNet 3.1: A Lexical Database for English, Princeton University
-
 =====Translations=====
-{{rfc-level|Translations at L4+ not in L3 POS section|lang=en}}
 {{trans-top|to begin building}}
 * Armenian: {{t-|hy|հիմքը դնել|tr=himkʿë dnel}}, {{t-|hy|հիմքը գցել|tr=himk’ë gc’el}}
 * Czech: {{t+|cs|založit}}
@@ -64,7 +59,7 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 {{trans-mid}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf.}}
-* Scots: {{tø|sco|foond|xs=Scots}}
+* Scots: {{tø|sco|foond}}
 * Spanish: {{t+|es|fundar}}
 * Swedish: {{t-|sv|grundlägga}}
 * Turkish: {{t+|tr|temel atmak}}
@@ -84,14 +79,14 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
 * Portuguese: {{t+|pt|fundar}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf.}}
-* Scots: {{tø|sco|foond|xs=Scots}}
+* Scots: {{tø|sco|foond}}
 * Spanish: {{t+|es|fundar}}
 * Swedish: {{t+|sv|grunda}}
 * Turkish: {{t+|tr|kurmak}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|eo}}: {{t+|eo|fondi|xs=Esperanto}}
+* {{ttbc|eo}}: {{t+|eo|fondi}}
 * {{ttbc|et}}: {{t-|et|asutama}}
 {{trans-mid}}
 * {{ttbc|pt}}: {{t+|pt|fundar}}
@@ -99,6 +94,10 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 * {{ttbc|sh}}: [[osnovati]]
 * {{ttbc|sv}}: [[grunda]]
 {{trans-bottom}}
+
+====References====
+* Oxford Online Dictionary, found
+* WordNet 3.1: A Lexical Database for English, Princeton University
 
 =====Related terms=====
 * [[foundation]]
