--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -6,36 +6,36 @@
 * {{rhymes|aʊnd}}
 
 ===Etymology 1===
-see {{term|find|lang=en}}
+see {{term|find|lang=en}}.
 
 ====Adjective====
 {{en-adj}}
 
-# come upon unexpectedly or after searching
+# Come upon unexpectedly or after searching.
 # [[equipped]]; [[supplied]]
 
 ====Noun====
-{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
+{{en-noun|?}}
 
-# food and lodging, [[board]]
-#:* {{quote-book
- |year=1872
- |year_published='''2009'''
- |edition=HTML
- |editor=
- |author=James De Mille
- |title=The Cryptogram
- |chapter=
- |url=http://www.gutenberg.org/dirs/2/8/4/3/28435/28435-h/28435-h.htm
- |genre=
- |publisher=The Gutenberg Project
- |isbn=
- |page=
- |passage=I'll only give you the usual payment--say five hundred dollars a year, and '''found'''." / "And--what?" / "'''Found'''--that is, board, you know, and clothing, of course, also.
+# Food and lodging, [[board]].
+#: {{quote-book
+|year=1872
+|year_published='''2009'''
+|edition=HTML
+|editor=
+|author=James De Mille
+|title=The Cryptogram
+|chapter=
+|url=http://www.gutenberg.org/dirs/2/8/4/3/28435/28435-h/28435-h.htm
+|genre=
+|publisher=The Gutenberg Project
+|isbn=
+|page=
+|passage=I'll only give you the usual payment--say five hundred dollars a year, and '''found'''." / "And--what?" / "'''Found'''--that is, board, you know, and clothing, of course, also.
 }}
 
 ====Verb====
-'''found'''
+{{head|en}}
 
 # {{past of|find}}
 
@@ -47,6 +47,10 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 
 # To [[begin]] [[building]].
 # To start some type of [[organization]] or [[company]].
+
+=====Related terms=====
+* [[foundation]]
+* [[founder]]
 
 =====Translations=====
 {{trans-top|to begin building}}
