--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -134,6 +134,7 @@
 
 [[Category:English proper nouns]]
 [[Category:en:Countries]]
+[[Category:en:United States of America|*]]
 
 [[ar:United States of America]]
 [[az:United States of America]]
