--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -21,7 +21,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=yi6, yik6}}
+{{yue-hanzi|jyut=|y=[[yi6]], [[yik6]]}}
 
 # {{defn|lang=yue|sort=日04}}
 
