Serbian →‎ Serbo-Croatian using [[Project:AWB|AWB]] <vomit#18292310>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -61,7 +61,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Romanian: {{t-|ro|vomita}}, {{t+|ro|borî}},  {{t-|ro|vărsa}}
 * Romansch: {{t-|rm|vomitar|xs=Romansch}}
 * Russian: {{t+|ru|блевать}}, {{t+|ru|рвать}}
-* Serbian: {{t|sr|zbljuvati}}, {{t|sr|povratiti}}, {{t-|sr|bljuvati}}, {{t-|sr|povraćati}}
+* Serbo-Croatian: {{t|sh|zbljuvati}}, {{t|sh|povratiti}}, {{t|sh|bljuvati}}, {{t|sh|povraćati}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|повратити|tr=povratiti|sc=Cyrl}}
 *: Latin: {{t-|sh|rigati}}
@@ -111,7 +111,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Polish: [[wymiociny]] {{p}}
 * Portuguese: {{t+|pt|vômito|m}}
 * Russian: {{t+|ru|блевотина|f}}, {{t+|ru|рвота|f}}
-* Serbian: [[bljuvotina]] {{f}}, [[povraćaj]] {{m}}, [[izbljuvak]] {{m}}
+* Serbo-Croatian: [[bljuvotina]] {{f}}, [[povraćaj]] {{m}}, [[izbljuvak]] {{m}}
 * Serbo-Croatian:
 *: Latin: {{t-|sh|povraćka|f}}
 * Spanish: {{t-|es|vómito|m}}
