--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -25,20 +25,20 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 ====Translations====
 {{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|to regurgitate the contents of a stomach}}
-* Afrikaans: {{t-|af|braak|xs=Afrikaans}}
-* American Sign Language: {{tø|ase|5@Mouth-5@FromUlnarTipFinger 5@FromMouth-5@FromUlnarTipFinger|xs=American Sign Language}}
+* Afrikaans: {{t-|af|braak}}
+* American Sign Language: {{tø|ase|5@Mouth-5@FromUlnarTipFinger 5@FromMouth-5@FromUlnarTipFinger}}
 * Armenian: {{t-|hy|հետ տալ|tr=het tal}}, {{t+|hy|փսխել|tr=p'sxel}}, {{t-|hy|ործկալ|tr=orçkal}}
 * Aromanian: {{t-|rup|vomu}}
 * Burmese: {{t+|my|အန်|tr=an|sc=Mymr}}
 * Catalan: {{t+|ca|vomitar}}
 * Czech: {{t+|cs|zvracet}}
-* Danish: {{t+|da|brække sig}},  {{t+|da|kaste op}}
+* Danish: {{t+|da|brække sig}}, {{t+|da|kaste op}}
 * Dutch: {{t+|nl|overgeven}}, {{t+|nl|braken}}, {{t+|nl|kotsen}} {{qualifier|colloquial}}
-* Esperanto: {{t-|eo|vomi|xs=Esperanto}}
+* Esperanto: {{t-|eo|vomi}}
 * Estonian: {{t-|et|oksendama}}
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|familiar}}
-* Galician: {{t+|gl|vomitar|xs=Galician}}
+* Galician: {{t+|gl|vomitar}}
 * German: [[sich]] [[übergeben]], [[erbrechen]], {{t+|de|kotzen}}
 * Greek: {{t+|el|εξεμώ|tr=exemó}}, {{t-SOP|el|[[κάνω#Greek|κάνω]] [[εμετό#Greek|εμετό]]|tr=káno emetó}}, {{t+|el|ξερνώ|tr=xernó}} {{qualifier|colloquial}}
 *: Ancient: {{tø|grc|ἐμέω|tr=emeō|sc=polytonic}}, {{tø|grc|ἐξεμέω|sc=polytonic}}
@@ -50,22 +50,21 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 {{trans-mid}}
 * Latin: {{t-|la|vomo|alt=vomō}}, {{t-|la|vomito|vomitō}}
 * Latvian: {{t+|lv|vemt}}
-* Lithuanian: {{t+|lt|vemti|xs=Lithuanian}}
-* Macedonian: {{t-|mk|повраќа|tr=póvraḱa}},  {{t-|mk|блуе|tr=blúe}}
+* Lithuanian: {{t+|lt|vemti}}
+* Macedonian: {{t-|mk|повраќа|tr=póvraḱa}}, {{t-|mk|блуе|tr=blúe}}
 * Malay: {{t-|ms|muntah}}
 * Maltese: [[irrimetta]], [[qala']]
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t-|no|brekke seg}}
-* Old Irish: {{tø|sga|sceid|xs=Old Irish}}
+* Old Irish: {{tø|sga|sceid}}
 * Polish: {{t+|pl|wymiotować}}
 * Portuguese: {{t+|pt|vomitar}}, {{t+|pt|regurgitar}}
 * Rapa Nui: {{tø|rap|rua}}
-* Romanian: {{t-|ro|vomita}}, {{t+|ro|borî}},  {{t-|ro|vărsa}}
-* Romansch: {{t-|rm|vomitar|xs=Romansch}}
+* Romanian: {{t-|ro|vomita}}, {{t+|ro|borî}}, {{t-|ro|vărsa}}
+* Romansch: {{t-|rm|vomitar}}
 * Russian: {{t+|ru|блевать}}, {{t+|ru|рвать}}
-* Serbo-Croatian: {{t|sh|zbljuvati}}, {{t|sh|povratiti}}, {{t|sh|bljuvati}}, {{t|sh|povraćati}}
 * Serbo-Croatian:
-*: Cyrillic: {{t-|sh|повратити|tr=povratiti|sc=Cyrl}}
-*: Latin: {{t-|sh|rigati}}
+*: Cyrillic: {{t|sh|ригати|sc=Cyrl}}, {{t|sh|збљувати|sc=Cyrl}}, {{t-|sh|повратити|sc=Cyrl}}, {{t|sh|бљувати|sc=Cyrl}}, , {{t|sh|повраћати|sc=Cyrl}}
+*: Latin: {{t-|sh|rigati}},  {{t|sh|zbljuvati}}, {{t|sh|povratiti}}, {{t|sh|bljuvati}}, {{t|sh|povraćati}}
 * Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}
 * Swahili: {{t-|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t-|sv|kasta upp}}
@@ -88,25 +87,25 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Armenian: {{t-|hy|փսխունք|tr=p'sxunk'}}
 * Bosnian: Dusmabagey
 * Czech: {{t-|cs|zvratky|m|p}}
-* Danish: {{t+|da|bræk|n}},  {{t+|da|opkast|n}}
+* Danish: {{t+|da|bræk|n}}, {{t+|da|opkast|n}}
 * Dutch: [[braaksel]], {{qualifier|colloquial}} [[kots]]
 * Estonian: {{t+|et|okse}}
 * Finnish: {{t+|fi|oksennus}}
 * French: {{t+|fr|vomi|m}}
-* Galician: {{t-|gl|vómito|m|xs=Galician}}
+* Galician: {{t-|gl|vómito|m}}
 * Georgian: {{t-|ka|პირიღებინება|tr=pirighebineba|sc=Geor}}
 * German: {{t+|de|Kotze|f}}, {{t+|de|Erbrochenes}}
 * Greek: {{t+|el|έμεσμα|n|tr=émesma}}
 * Hebrew: {{t-|he|קא|tr=kei}}
-* Hungarian: {{t+|hu|hányás}},  {{t-|hu|hányadék}}
+* Hungarian: {{t+|hu|hányás}}, {{t-|hu|hányadék}}
 * Japanese: {{t-|ja|反吐|tr=へど, hedo|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[ڕشانه‌وه‌]]}}
 * Latin: {{t-|la|vomitus|m}}
 * Latvian: {{t-|lv|vēmekļi|m|p}}
 {{trans-mid}}
-* Lithuanian: {{t-|lt|vėmalai|p|xs=Lithuanian}}
-* Macedonian: {{t-|mk|повраќаница|f|tr=povraḱánica}},  {{t-|mk|блујавица|f|tr=blujávica}}
+* Lithuanian: {{t-|lt|vėmalai|p}}
+* Macedonian: {{t-|mk|повраќаница|f|tr=povraḱánica}}, {{t-|mk|блујавица|f|tr=blujávica}}
 * Malay: {{t-|ms|muntahan}}
 * Maltese: [[rimettar]]
 * Norwegian: {{t+|no|oppkast|n}}, {{t+|no|spy|n}}
@@ -122,7 +121,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Turkish: {{t+|tr|kusmuk}}, {{t+|tr|kusuntu}}
 * Ukrainian: {{t+|uk|блювота|f|tr=bljuvóta|sc=Cyrl}}, {{t+|uk|блювотиння|n|tr=bljuvotýnnja|sc=Cyrl}}
 * Urdu: [[الٹى]]
-* Vietnamese: {{t+|vi|nôn|xs=Vietnamese}}, {{t+|vi|mửa|xs=Vietnamese}}
+* Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 {{trans-bottom}}
 
 ====See also====
