/* Translations */Serbian →‎ Serbo-Croatian using [[Project:AWB|AWB]] <spelt#18299604>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -60,7 +60,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|spelt||spelt, corn|lang=ang}}, from 
 * Portuguese: {{t|pt|espelta|f}}
 * Romanian: {{t|ro|alac|n}}
 * Russian: {{t|ru|полба|f|tr=pólba}}
-* Serbian: {{t|sr|прапшеница|f|tr=prapšenica|sc=Cyrl}}
+* Serbo-Croatian: {{t|sh|прапшеница|f|tr=prapšenica|sc=Cyrl}}
 * Slovene: {{t-|sl|pira|f}}
 * Spanish: {{t|es|espelta|f}}, {{t-|es|escanda|f}}
 * Swedish: {{t|sv|dinkel}},  {{t-|sv|spelt}}
