--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -37,17 +37,17 @@ Strong conjugation of {{term|heat}}
 
 ==Dutch==
 
-===Etymology===
-From {{etyl|odt|nl}} {{recons|it|lang=odt}}, {{recons|hit|lang=odt}}, neuter form of {{proto|Germanic|hiz|lang=nl}} or {{proto|Germanic|iz|lang=nl|title=}}.
-
 ===Pronunciation===
-* {{rhymes|ɛt|lang=nl}}
-* {{a|BE}} {{IPA|/ɦət/|lang=nl}}
+* {{rhymes|ət|ɛt|lang=nl}}
+* {{a|BE}} {{IPA|lang=nl|/ɦət/|lang=nl}}
 * {{audio|Nl-het (Belgium).ogg|audio (Belgium)}}
-* {{a|NL}} {{IPA|/ɦɛt/ (stressed)|/ət/ (unstressed)|lang=nl}}
+* {{a|NL}} {{IPA|lang=nl|/ət/}} {{qualifier|usually}}, {{IPA|lang=nl|/ɦɛt/}} {{qualifier|when stressed}}
 * {{audio|Nl-het.ogg|audio (Netherlands)}}
 
-===Article===
+===Etymology 1===
+From {{etyl|dum|nl}} {{term|dat|lang=dum}}, which was contracted to {{term|'t|lang=dum}} in usual speech. This form was later interpreted as being the same as the neuter pronoun {{term|het|lang=nl}} (etymology 2, see below), which was contracted in the same way. This then led to the modern spelling beginning with ''h'', which is in fact unetymological.
+
+====Article====
 {{head|nl|article|g=n}}
 
 # [[the]] {{qualifier|the [[neuter]] [[definite article]]}}
@@ -56,19 +56,22 @@ From {{etyl|odt|nl}} {{recons|it|lang=odt}}, {{recons|hit|lang=odt}}, neuter for
 #: '''''het''' meisje''
 #:: '''the''' girl
 
-====Usage notes====
+=====Usage notes=====
 * Used in front of [[neuter]] nouns in the [[singular]], indicating a specific person or thing instead of the general case.
 * About grammatical gender in Dutch: all [[infinitive]]s and [[diminutive]]s are automatically neuter; therefore, ''[[meisje]]'', "girl", is neuter. However, sex takes precedence in all the pronouns. Compare ''het kopje en zijn schotel'' (the (little) cup and '''its''' saucer) with ''het meisje en haar hoed'' (the (little) girl and '''her''' hat). In many cases the possessive pronoun ''[[zijn]]'' or ''[[haar]]'' is avoided when referring to inanimate nouns; instead the [[pronominal adverb]] ''[[ervan]]'' is used: ''het kopje en de schotel ervan''.
 
-====Derived terms====
+=====Derived terms=====
 * {{l|nl|aan het}}
 * {{l|nl|hetzelfde}}
 
-===See also===
+====See also====
 * {{l|nl|de}}
 * {{l|nl|een}}
 
-===Pronoun===
+===Etymology 2===
+From {{etyl|odt|nl}} {{recons|it|lang=odt}}, {{recons|hit|lang=odt}}, neuter form of {{proto|Germanic|hiz|lang=nl}} or {{proto|Germanic|iz|lang=nl|title=}}.
+
+====Pronoun====
 {{head|nl|personal pronoun|g=n}}
 
 # [[it]]; {{n-g|third-person singular, neuter, subjective}}
@@ -101,7 +104,7 @@ From {{etyl|odt|nl}} {{recons|it|lang=odt}}, {{recons|hit|lang=odt}}, neuter for
 #: '''''Het''' zij zo.''
 #:: So be '''it'''.
 
-====Declension====
+=====Declension=====
 {{nl-decl-personal pronouns}}
 
 ----
