--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -136,6 +136,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Ngarrindjeri: {{tø|nay|kungun}}
 * Norwegian: {{t+|no|snakke}}
 * Occitan: {{t|oc|parlar}}
+* Old English: {{t|ang|sprecan}}
 * Old Saxon: {{tø|osx|sprekan}}
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan}}
 * Pipil: {{tø|ppl|taketza}}, {{tø|ppl|taquetza}}
