--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -1,14 +1,15 @@
 ==English==
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/kɔːt/}}
-* {{rhymes|ɔːt}}
-* {{a|US}} {{IPA|/kɔt/}} 
-* {{a|cot-caught}} {{IPAchar|/kɑt/}}
-* {{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
-* {{audio|en-us-caught.ogg|Audio (US cot-caught merged)}}
-* {{audio|en-au-caught.ogg|Audio (Australia)}}
+* {{a|UK}} {{IPA|/kɔːt/|[kʰɔːt]}}
 * {{audio|en-uk-caught.ogg|Audio (UK)}}
+* {{rhymes|ɔːt}}
+* {{a|US}} {{IPA|/kɔt/|[kʰɔt]}} 
+* {{a|cot-caught}} {{IPAchar|/kɑt/|[kʰɑt]}}
+* {{audio|en-us-caught.ogg|Audio (US cot-caught merged)}}
+* {{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
+* {{a|Australia|New Zealand}} {{IPA|/koːt/|[kʰoːt]}} 
+* {{audio|en-au-caught.ogg|Audio (Australia)}}
 
 ===Adverb===
 {{en-adv|-}}
