--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -5,7 +5,7 @@
 * {{audio|en-uk-caught.ogg|Audio (UK)}}
 * {{rhymes|ɔːt}}
 * {{a|US}} {{IPA|/kɔt/|[kʰɔt]}} 
-* {{a|cot-caught}} {{IPAchar|/kɑt/|[kʰɑt]}}
+* {{a|cot-caught}} {{IPA|/kɑt/|[kʰɑt]}}
 * {{audio|en-us-caught.ogg|Audio (US cot-caught merged)}}
 * {{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 * {{a|Australia|New Zealand}} {{IPA|/koːt/|[kʰoːt]}} 
