--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -86,7 +86,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Chinese:
 *: {{trreq|zh}}
 * Danish: {{t-|da|formue}}
-* Finnish: {{t+|fi|vara|alt=varat}}
+* Finnish: {{t+|fi|vara|alt=varat|p}}
 * German: {{t+|de|Substanz|f}}
 * Hungarian: {{t+|hu|vagyon}}
 * Japanese: {{t-|ja|本質|tr=honshitsu}}, {{t-|ja|実体|tr=jittai}}
@@ -102,7 +102,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 {{trans-top|drugs}}
 * Chinese:
 *: {{trreq|cmn}}
-* Finnish: {{t+|fi|aine|alt=aineet}}
+* Finnish: {{t+|fi|aine|alt=aineet|p}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t|el|ουσίες|tr=ousíes}} {{f|p}}
 * Hungarian: {{t|hu|szer}}
