--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -36,9 +36,9 @@ From {{etyl|enm}} {{term|comen|lang=enm}}, {{term|cumen|lang=enm}}, from {{etyl|
 #: ''He was a dream '''come''' true.''
 
 ====Usage notes====
-Used in the collocations “[[come with]]” and “[[come along]]” to mean {{term|accompany}}, used as “Do you want to come with me?” and “Do you want to come along?” In Midwestern American dialect, “come with” can occur in sentence final, as in “Do you want to come with?” but not in other dialects; “with” can also be used in this way with some other verbs, such as “take with”.
+The phrase "dream come true" is a set phrase; the verb "come" in the sense "become" is archaic outside of that<!-- and other--> set phrase<!--s-->.
 
-Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref>
+The collocations “[[come with]]” and “[[come along]]” mean {{term|accompany}}, used as “Do you want to come with me?” and “Do you want to come along?” In the Midwestern American dialect, “come with” can occur without a following object, as in “Do you want to come with?” In this dialect, “with” can also be used in this way with some other verbs, such as “take with”. Examples of this may be found in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref> This objectless use is not permissible in other dialects.
 
 ====Antonyms====
 * [[leave]], [[go]]
