--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -43,6 +43,8 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 #*: You could also set a fire trap, '''pull''' the mob toward it, then send in your pet….
 #* '''2008''' August 18, "Mark (newsgroups)" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/72486e99a34604b5 Re: I'm a priest now!]", in <tt>alt.games.warcraft</tt>, Usenet:
 #*: Shield yourself, '''pull''' with Mind Blast if you want, or merely '''pull''' with SW:P to save mana, then wand, fear if you need to, but use the lowest rank fear.
+# to [[score]] a certain amount of points in a sport.
+* ''How many point did you pull today, Albert?''
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} [[drag]], [[tow]], [[tug]], [[yank]]
