--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -27,6 +27,7 @@ Alternate etymology connects Frankish {{recons|blund|lang=frk}} to {{proto|Germa
 * Esperanto: {{t-|eo|blondulo|xs=Esperanto}}; {{t-|eo|blondulino|xs=Esperanto}} (female)
 * French: {{t+|fr|blonde|f}}
 * German: {{t+|de|Blondine|f}}
+* Hindi: {{t|hi|सुनहरे बालोंवाला|sc=Deva}}
 * Hungarian: {{t+|hu|szőke}}
 * Italian: {{t-|it|bionda|f}}, {{t+|it|biondo|m}}
 {{trans-mid}}
