t+es:[[corte]] t-balance t+es:[[cortar]] ([[WT:EDIT|Assisted]]) <cut#18343348>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -164,6 +164,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Romanian: {{t-|ro|tăietură|f}}, {{t-|ro|incizie|f}}
 * Russian: {{t+|ru|порез|m|sc=Cyrl|alt=поре́з|tr=poréz}} ''wound'', {{t+|ru|разрез|m|sc=Cyrl|alt=разре́з|tr=razréz}}
 * Scottish Gaelic: {{t-|gd|gearradh|m}}
+* Spanish: {{t|es|corte|m}}
 * Swedish: {{t+|sv|skärsår|n}}
 * Tagalog: {{t-|tl|hiwa}}
 * Turkish: {{t+|tr|kesik}}
@@ -186,6 +187,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Romanian: {{t-|ro|tăiere|f}}
 * Russian: {{t+|ru|резание|n|sc=Cyrl|alt=ре́зание|tr=rézanije}}
 * Scottish Gaelic: {{t-|gd|gearradh|m}}
+* Spanish: {{t|es|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
 * Turkish: {{t+|tr|kesme}}
 {{trans-bottom}}
@@ -201,6 +203,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Portuguese: {{t+|pt|corte|m}}
 * Romanian: {{t-|ro|tăietură|f}}
 * Scottish Gaelic: {{t-|gd|gearradh|m}}
+* Spanish: {{t|es|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
 {{trans-bottom}}
 
@@ -253,10 +256,11 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Danish: {{t-|da|udskæring|c}}, {{t-|da|stykke|n}}
 * Dutch: {{t+|nl|stuk|n}}
 * Finnish: {{t+|fi|pala}}
-{{trans-mid}}
 * French: {{t+|fr|coupe|f}}
+{{trans-mid}}
 * Hebrew: {{t+|he|חתיכה|f|tr=khatikhá}}
 * Italian: {{t+|it|taglio|m}}, {{t+|it|pezzo|m}}
+* Spanish: {{t|es|corte|m}}
 {{trans-bottom}}
 
 {{trans-top|in fencing, an attack made with a chopping motion of the blade}}
@@ -602,6 +606,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 {{trans-mid}}
 * Italian: {{t+|it|alzare}}
 * Portuguese: {{t+|pt|cortar}}
+* Spanish: {{t|es|cortar}}
 * Swedish: {{t+|sv|kupera}}
 {{trans-bottom}}
 
