--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -67,9 +67,11 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 {{trans-top|construction or natural feature that spans a divide}}
 * Abkhaz: {{t-|ab|ацҳа|tr=acẋa|sc=Cyrl}}
 * Afrikaans: {{t-|af|brug|xs=Afrikaans}}
+* {{trreq|ak}}
 * Albanian: {{t-|sq|urë|f|xs=Albanian}}
 * Arabic: {{t-|ar|جسر|m|tr=jisr|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|كوبري|m|tr=kobri|sc=Arab}}
+* {{trreq|an}}
 * Armenian: {{t+|hy|կամուրջ|tr=kamurǰ}}
 * Asturian: {{t-|ast|ponte|f}}, {{t|ast|puente|m}}
 * Azeri: {{t+|az|körpü|xs=Azeri}}
@@ -109,6 +111,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Ido: {{t|io|ponto}}
 * Indonesian: {{t+|id|jembatan|xs=Indonesian}}
 * Interlingua: {{t-|ia|ponte}}
+* {{trreq|ie}}
 * Irish: {{t+|ga|droichead|m}}
 * Italian: {{t+|it|ponte|m}}
 * Japanese: {{t+|ja|橋|tr=はし, hashi|sc=Jpan}}
@@ -145,6 +148,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Old English: {{t-|ang|brycg|f|xs=Old English}}
 * {{trreq|or}}
 * Ossetic: {{tø|os|хид|tr=xid|sc=Cyrl|xs=Ossetian}}
+* {{trreq|ps}}
 * Persian: {{t+|fa|پل|tr=pol|xs=Persian}}
 * Polish: {{t+|pl|most|m}}
 * Portuguese: {{t+|pt|ponte|f}}
@@ -159,6 +163,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|мост|alt=мо̑ст|m|sc=Cyrl}}, {{t-|sh|ћуприја|alt=ћу̀прија|f|sc=Cyrl}} ''(arch./poetic)''
 *: Roman: {{t-|sh|most|alt=mȏst|m|sc=Latn}}, {{t+|sh|ćuprija|alt=ćùprija|f|sc=Latn}} ''(arch./poetic)''
+* {{trreq|sd}}
 * Sinhalese: {{t-|si|පාලම|tr=pālama|sc=Sinh}}
 * Slovak: {{t-|sk|most|m}}
 * Slovene: {{t+|sl|most|m}}
@@ -185,7 +190,11 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Vilamovian: {{tø|wym|bryk}}
 * Welsh: {{t+|cy|pont|xs=Welsh}}, {{t+|cy|pontydd|p|xs=Welsh}}
 * West Frisian: {{t|fy|brêge}}
+* {{trreq|wo}}
+* {{trreq|xh}}
 * Yiddish: {{t-|yi|בריק|f|tr=brik|xs=Yiddish}}
+* {{trreq|yo}}
+* {{trreq|zu}}
 {{trans-bottom}}
 
 {{trans-top|bony ridge of the nose}}
