--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -103,6 +103,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * German: {{t+|de|Brücke|f}}
 * Greek: {{t+|el|γέφυρα|f|tr=géfyra}}
 * Gujarati: {{t-|gu|પુલ|tr=pul|sc=Gujr}}
+* {{trreq|ha}}
 * Hawaiian: {{tø|haw|uapo|xs=Hawaiian}}
 * Hebrew: {{t+|he|גשר|m|tr=gesher}}
 * Hindi: {{t-|hi|पुल|m|tr=pul|sc=Deva}}
