t+fi:[[nostaa]] t+fi:[[koukata]] ([[WT:EDIT|Assisted]]) <cut#18347876>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -593,13 +593,14 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 
 {{trans-top|to change direction suddenly}}
 * Dutch: {{t+|nl|kappen}}
-* Finnish: {{t-|fi|mutkitella}}
+* Finnish: {{t-|fi|mutkitella}}, {{t|fi|koukata}}
 {{trans-mid}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 {{trans-bottom}}
 
 {{trans-top|to divide a pack of playing cards}}
 * Dutch: {{t+|nl|schudden}}
+* Finnish: {{t|fi|nostaa}}
 * French: {{t+|fr|couper}}
 * German: {{t+|de|schneiden}}
 * Icelandic: {{t+|is|skipta}},  {{t+|is|skera}},  {{t+|is|draga}}
