--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -27,6 +27,7 @@ From {{etyl|fro|fr}} < {{etyl|la|fr}} {{term|causa|lang=la}}. Compare Italian {{
 
 ===Pronunciation===
 * {{IPA|/ʃoz/|lang=fr}}
+* {{a|Quebec}} {{IPA|/ʃoʊz/|lang=fr}}
 * {{audio|Fr-chose.ogg|audio}}
 * {{rhymes|oz|lang=fr}}
 
