--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -105,7 +105,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō}}
 * Kurdish:
 *: Sorani: {{t|ku|به‌ها}}, {{t|ku|نرخ}}
-* Latvian: {{t-|lv|maksa|f}}
+* Latvian: {{t-|lv|maksa|f}}, {{t|lv|cena|f}}, {{t|lv|dārdzība|f}}
 * Novial: [[kosto]]
 * Polish: {{t+|pl|koszt|m}}
 * Portuguese: {{t+|pt|custo|m}}
