--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -11,7 +11,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈfɹɑːns/}}
-* {{a|UK}} {{IPA|/ˈfɹænts/}}
+* {{a|UK}} {{IPA|/ˈfɹæns/}}
 * {{audio|en-us-France.ogg|Audio (US)}}
 * {{rhymes|ɑːns}}
 
