--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -46,6 +46,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Aramaic:
 *: [[Syriac]]: {{tø|syc|ܟܬܫ|tr=kθaš|sc=Syrc}}
 * Armenian: {{t-|hy|կռվել|tr=kṙvel}}
+* Aromanian: {{t|rup|alumtu}}
 * Basque: {{t-|eu|borrokatu|xs=Basque}}, {{t-|eu|borroka egin|xs=Basque}}
 * Belarusian: {{t-|be|біцца|tr=bícca|sc=Cyrl}}, {{t-|be|змагацца|tr=zmahácca|sc=Cyrl}}
 * Bulgarian: {{t-|bg|боря се|tr=borja se}}
