--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -215,6 +215,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Urdu: {{t-|ur|بیر|tr=ber|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|mận}}, {{t-|vi|quả mận}}, {{t-|vi|trái mận}}
 * Volapük: {{t+|vo|plöm}}
+* Welsh: {{t|cy|eirinen}}
 * West Frisian: {{t-|fy|prom|xs=West Frisian}}
 * Yiddish: {{t-|yi|פֿלוים|f|tr=floym|sc=Hebr}}
 {{trans-bottom}}
