Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <plum#18423102>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -264,7 +264,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Spanish: {{t+|es|ciruelo|m}}
 * Swahili: {{t+|sw|mzambarau|xs=Swahili}}
 * Swedish: {{t+|sv|plommonträd|n}}
-* Vietnamese: [[cây]] [[mận]]
+* Vietnamese: {{t|vi|cây mận}}
 * Volapük: {{t+|vo|plömabim}}
 {{trans-bottom}}
 
@@ -278,16 +278,16 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Irish: {{t-|ga|plumachorcra}}
 * Japanese: {{t-|ja|暗紫色|tr=あんししょく, anshishoku}}
 * Swahili: {{t+|sw|zambarau|xs=Swahili}}
-* Vietnamese: [[màu]] [[mận]]
+* Vietnamese: {{t|vi|màu mận}}
 {{trans-bottom}}
 
 {{trans-top|a desirable thing}}
 * Danish: {{t-|da|lækkerbisken|c}}
-* French: [[meilleur]] [[morceau]] {{m}}
+* French: {{t|fr|meilleur morceau|m}}
 * German: {{t+|de|Leckerbissen|m}}
 {{trans-mid}}
 * Swahili: {{t+|sw|mzambarau|xs=Swahili}}
-* Vietnamese: (noun +) [[chọn lọc]], [[món]] [[bở]]
+* Vietnamese: (noun +) [[chọn lọc]], {{t|vi|món bở}}
 {{trans-bottom}}
 
 {{trans-see|[[raisin]]}}
@@ -305,18 +305,18 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|bg}}: [[слива]] (sliva) {{f}} (2)
-* {{ttbc|ang}}: [[plūme]] {{f}}
-* {{ttbc|gl}}: [[ameixeira]] {{f}} (1), [[ameixa]] {{f}} (2)
-* {{ttbc|la}}: [[prunum]] {{n}}
+* {{ttbc|bg}}: {{t|bg|слива|f|tr=sliva|sc=Cyrl}} (2)
+* {{ttbc|ang}}: {{t|ang|plūme|f|sc=Latinx}}
+* {{ttbc|gl}}: {{t|gl|ameixeira|f}} (1), {{t|gl|ameixa|f}} (2)
+* {{ttbc|la}}: {{t|la|prunum|n}}
 {{trans-mid}}
-* {{ttbc|lt}}: [[slyva]] {{f}} (1, 2), [[slyvinis]] {{m}} (3)
-* {{ttbc|no}}: [[plomme]]
-* {{ttbc|sa}}: [[कर्कन्धुः]] (karkandhuḥ)
-* {{ttbc|th}}: {{Thai|[[ลูกพุทราฝรั่ง]]}} (luukphutrafrang)
-* {{ttbc|vo}}: [[plöm]]
-* {{ttbc|cy}}: [[eirinen]] {{f}}
-* {{ttbc|zu}}: [[iplamu]], [[ithungulu]]
+* {{ttbc|lt}}: {{t|lt|slyva|f}} (1, 2), {{t|lt|slyvinis|m}} (3)
+* {{ttbc|no}}: {{t|no|plomme}}
+* {{ttbc|sa}}: {{t|sa|कर्कन्धुः|tr=karkandhuḥ|sc=Deva}}
+* {{ttbc|th}}: {{t|th|ลูกพุทราฝรั่ง|tr=luukphutrafrang|sc=Thai}}
+* {{ttbc|vo}}: {{t|vo|plöm}}
+* {{ttbc|cy}}: {{t|cy|eirinen|f}}
+* {{ttbc|zu}}: {{t|zu|iplamu}}, {{t|zu|ithungulu}}
 {{trans-bottom}}
 
 ====Adjective====
