--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -115,6 +115,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 # A definable part, such as an individual [[song]], of a [[recording]], particularly of [[commercial]] records, [[audio]] [[tape]]s, [[CD]]s, etc.
 #: ''The drummer on the last '''cut''' of their CD is not identified.''
 # {{archaeology}} A [[truncation]], a context that represents a moment in time when other archaeological [[deposit]]s were removed for the creation of some feature such as a [[ditch]] or [[pit]].
+# A [[haircut]].
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''cut'' (noun)}}
