--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Finnish: {{t-|fi|leikattu}}, {{t-|fi|vähennetty}}, {{t-|fi|kevennetty}}, {{t-|fi|heikennetty}}
 * German: {{t+|de|geschnitten}}
 {{trans-mid}}
+* Italian: {{t|it|ridotto}}
 * Portuguese: {{t+|pt|reduzido|m}}
 * Russian: {{t-|ru|урезаный|sc=Cyrl|alt=уре́заный|tr=urézanyj}}
 {{trans-bottom}}
