--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -4,7 +4,7 @@
 Derived from [[масло]] ('butter', 'oil'). Compare French [[mardi gras]].
 
 ===Pronunciation===
-* {{IPA|/ˈmaslʲinʲiʦə/|lang=ru}}, {{X-SAMPA|/"masl'in'its@/}}
+* {{IPA|/ˈmaslʲinʲit͡sə/|lang=ru}}, {{X-SAMPA|/"masl'in'its@/}}
 
 ===Noun===
 '''масленица''' {{f}}
