--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -141,6 +141,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Maltese: {{t-|mt|pont|m|xs=Maltese}}
 * Maori: {{t-|mi|piriti}}, {{t-|mi|arawhata}}
 * {{trreq|mr}}
+* {{trreq|mwl}}
 * Mongolian: {{t-|mn|гүүр тавих|tr=güür tavih|sc=Cyrl}}, {{t-|mn|гүүр|tr=güür|sc=Cyrl}}
 * Navajo: {{tø|nv|naʼníʼá}}
 * Nepali: {{t-|ne|पुल|tr=pul|sc=Deva|xs=Nepali}}
