--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -36,7 +36,7 @@ From {{etyl|la}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so fo
 
 ====Translations====
 {{trans-top|and so on}}
-* Arabic: {{t|ar|وهلم جرا|tr=wa-halumma jaraa|alt=وهَلُمَّ جَرًّا|sc=Arab}}, {{t|ar|إلخ|tr='ilakh|sc=Arab}}, {{t|ar|إلى آخره|tr='íla 'aakhirih|sc=Arab}}
+* Arabic: {{t|ar|إلخ|tr=ilaḵḵ|sc=Arab}}, {{t|ar|إلى آخره|tr=ílā āḵirihi|sc=Arab}}, {{t|ar|وهلم جرا|tr=wa-halumma jarran|alt=وهَلُمَّ جَرًّا|sc=Arab}}
 * Bengali: {{t|bn|ইত্যাদি|tr=ittêdi|sc=Beng}}
 * Bulgarian: [[и така нататък]], [[и т.н.]]
 * Chinese:
