--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -177,6 +177,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 {{trans-mid}}
 * Hungarian: {{t+|hu|érez}}
 * Polish: {{t+|pl|czuć}}, {{t+|pl|czuć się}}
+* Russian: {{t+|ru|чувствовать|tr=čúvstvovat'}}, {{t+|ru|ощущать|tr=oščuščát'|sc=Cyrl}}
 * Slovene: {{t+|sl|čutiti}}
 * Spanish: {{t-|es|sentirse}}
 {{trans-bottom}}
@@ -216,7 +217,6 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * {{ttbc|lv}}: {{t|lv|just}} (1,2,4,5,6), {{t|lv|taustīties}} (3)
 * {{ttbc|pt}}: {{t|pt|sentir}}, {{t|pt|sentir-se}}
 * {{ttbc|ro}}: {{t+|ro|simți|alt=a (se) simți}}
-* {{ttbc|ru}}: {{t+|ru|чувствовать|tr=čúvstvovat'}}, {{t|ru|ощущать|sc=Cyrl}}
 * {{ttbc|gd}}: {{t|gd|mothaich}}, {{t|gd|fairich}}
 * {{ttbc|es}}: {{t|es|sentir}} (1, 2), {{t|es|sentirse}} (5)
 * {{ttbc|sv}}: {{t+|sv|känna}} (1, 4, 5), {{t-|sv|känna på sig}} (2, 7, 8), {{t-|sv|känna sig}} (3)
