t+io:[[kurteno]] t-balance ([[WT:EDIT|Assisted]]) <curtain#18517870>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -49,13 +49,14 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Hebrew: {{t+|he|וילון|m|tr=vilon}}
 * Hindi: {{t-|hi|परदा|m|tr=parda|sc=Deva}}
 * Icelandic: {{t+|is|gluggatjald|n}}, {{t-|is|gardína|f}}
+* Ido: {{t|io|kurteno}}
 * Italian: {{t+|it|tenda|f}}, {{t-|it|tappezzeria|f}}, {{t-|it|drappo|m}}
 * Japanese: {{t+|ja|カーテン|tr=kāten}}
 * Korean: {{t+|ko|커튼|tr=keoteun|sc=Kore}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[په‌رده‌]]}}
-* Latvian: {{t-|lv|aizkars|m|xs=Latvian}}
 {{trans-mid}}
+* Latvian: {{t-|lv|aizkars|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|užuolaida|f|xs=Lithuanian}}
 * Luxembourgish: {{t-|lb|Rido|f}}
 * Macedonian: {{t-|mk|завеса|f|tr=závesa}},  {{t-|mk|перде|n|tr=pérde}}
