--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -67,7 +67,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 * Manx: {{t|gv|ard-niau}}
 * Polish: {{t+|pl|zenit|m}}, {{t-|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zênite|m}}
-* Romanian: {{t+|ro|dric|m|tr=drik}}
+* Romanian: {{t+|ro|dric|m}}
 * Russian: {{t+|ru|зенит|m|tr=zenít}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|зенит|m}}
