--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -36,8 +36,10 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Estonian: {{t-|et|loendus}}
 {{trans-mid}}
 * French: {{t+|fr|compter}}
+* German: {{t+|de|zählen}}
 * Icelandic: {{t-|is|talning|f}}
 * Portuguese: {{t+|pt|contar}}
+* Romanian: {{t+|ro|socoti}}
 * Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
 {{trans-bottom}}
 
