--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -46,7 +46,7 @@
 ===Hanzi===
 in Mainland China {{cmn-hanzi|pin=[[zhèn]] ([[zhen4]])|wg=chen<sup>4</sup>}}
 in Taiwan {{cmn-hanzi|pin=[[zùn]] ([[zùn4]])|wg=tsun<sup>4</sup>}}
-{{head|cmn|hanzi|sc=Hani}}{{attention|zh|needs inflection template}}
+{{head|cmn|hanzi|sc=Hani}}{{attention|cmn|needs inflection template}}
 
 # {{defn|lang=cmn|sort=土03}}
 
