--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -8,7 +8,11 @@
 From {{etyl|la}} {{term|icon|lang=la}}, from {{etyl|grc}} {{term|εἰκών||likeness, image, portrait|tr=eikōn|lang=grc}}. Eastern Orthodox Church sense is attested from 1833. Computing sense first recorded in 1982.
 
 ===Pronunciation===
-* {{audio|En-us-icon.ogg|Audio (US)}}
+* {{a|UK}}
+** {{IPA|/ˈaɪ.kən/}}
+* {{a|US}}
+** {{IPA|/ˈaɪ.kɑːn/}}
+** {{audio|En-us-icon.ogg|Audio (US)}}
 
 ===Noun===
 {{en-noun}}
