/* Noun */ derived, cleanup related <icon#18612561>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -24,10 +24,16 @@ From {{etyl|la}} {{term|icon|lang=la}}, from {{etyl|grc}} {{term|εἰκών||li
 # {{linguistics}} A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also {{term|symbol}} and {{term|index}}.
 # Pictual representations of files, programs and folders on a computer.
 
+====Derived terms====
+* [[aniconic]], [[aniconism]]
+* [[iconism]]
+
 ====Related terms====
-* [[iconic]], [[iconoclastic]], [[iconify]]
-* [[iconoclasm]], [[iconoclast]]
-* [[iconstasis]], [[iconography]]
+* [[iconic]]
+* [[iconoclasm]], [[iconoclast]], [[iconoclastic]]
+* [[iconify]]
+* [[iconography]]
+* [[iconstasis]]
 
 ====Translations====
 {{trans-top|image}}
