--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -134,6 +134,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Lower Sorbian: {{tø|dsb|móst|m}}
 * Luxembourgish: {{t+|lb|Bréck|f}}
 {{trans-mid}}
+* {{trreq|lg}}
 * Macedonian: {{t-|mk|мост|m|tr=most|sc=Cyrl}}
 * Malagasy: {{t+|mg|tetezana}}
 * Malay: {{t-|ms|jambatan}}, {{t-|ms|titi}}, {{t-|ms|titian}}, {{t-|ms|jambat}}
