Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <butter#18633798>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -310,21 +310,21 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 =====Translations=====
 {{trans-top|to spread butter on}}
 * Bulgarian: {{t-|bg|намазвам с масло}}
-* Czech: [[mazat]] [[máslo|máslem]] (''[[impf.]]''); [[namazat]] [[máslo|máslem]]; [[pomazat]] [[máslo|máslem]] (''[[pf.]]'')
+* Czech: {{qualifier|[[impf.]]}} {{t|cs|mazat máslem}}, {{t|cs|namazat máslem}}, {{qualifier|[[pf.]]}} {{t|cs|pomazat máslem}}
 * Danish: {{t-|da|smøre}} brødet
-* Dutch: [[beboteren]], [[inboteren]], met boter [[besmeren]]
+* Dutch: {{t|nl|beboteren}}, {{t|nl|inboteren}}, {{t|nl|met boter besmeren}}
 * French: {{t+|fr|beurrer}}
-* German: [[mit]] Butter [[bestreichen]]
-* Interlingua: [[butyrar]]
+* German: {{t|de|mit Butter bestreichen}}
+* Interlingua: {{t|ia|butyrar}}
 {{trans-mid}}
 * Italian: {{t+|it|imburrare}}
-* Polish: [[smarować]] [[masłem]]
-* Portuguese: [[amanteigar]]; [[passar]] [[manteiga]] [[em]]
-* Russian: [[намазывать]] [[масло|маслом]] (namázyvat’ máslom)
-* Slovene: [[namazati z maslom]]
-* Spanish: [[untar]] [[mantequilla]]
-* Thai: {{Thai|[[ทาเนย]]}} (ta noey)
-* Vietnamese: [[quẹt]] bơ (vào)
+* Polish: {{t|pl|smarować masłem}}
+* Portuguese: {{t|pt|amanteigar}}, {{t|pt|passar manteiga em}}
+* Russian: {{t|ru|намазывать маслом|tr=namázyvat’ máslom|sc=Cyrl}}
+* Slovene: {{t|sl|namazati z maslom}}
+* Spanish: {{t|es|untar mantequilla}}
+* Thai: {{t|th|ทาเนย|tr=ta noey|sc=Thai}}
+* Vietnamese: {{qualifier|vào}} {{t|vi|quẹt bơ}}
 {{trans-bottom}}
 
 =====See also=====
