Common usages update. <feel#18646822>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -241,6 +241,8 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 #: ''I'm getting a feel for what you mean.''
 # An [[intuitive]] [[ability]]
 #: ''She has a feel for music.''
+# Alternative form of [[feeling]]
+#: ''I know that feel.''
 
 =====Derived terms=====
 * [[cop a feel]]
