--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -31,6 +31,15 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{te
 
 ----
 
+== Goguryeo ==
+=== Adjective ===
+{{head|zkg|adjective|tr=meyng}}
+
+# [[good]]
+# [[excellent]]
+
+----
+
 ==Japanese==
 
 ===Kanji===
